同步于: 12月8日7时2分

--- a/pages/p1/955044.md
+++ b/pages/p1/955044.md
@@ -1,4 +1,4 @@
-### 17则古训赠当今(图)
+### 中共第五巡视组入驻江西 农民却求助《看中国》(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="行舍其华，言去其辩。（看中国：手绘插画 志清）" src="https://img2.secretchina.com/pic/2019/4-8/p2398774a771091283-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="" src="https://img3.secretchina.com/pic/2020/12-8/p2833791a147774179-ss.jpg"/>
   <br>
-   行舍其华，言去其辩。（看中国：手绘插画 志清）
+   江西收押上访人员的集中点（受访者提供）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,60 +29,103 @@
   </div>
  </div>
  <p>
+  【看中国2020年12月8日讯】（看中国记者宋悦采访报道）近日，
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/古训" target="_blank">
-    古训
+   江西
+  </strong>
+  省赣州市农民李高禧投书《看中国》，揭露江西公安干警滥用职权强迫交易、串通法官、非法敛财三百余万元并害他身陷冤狱的恶行。李高禧还披露，他上告无门的情况下，恰逢中央第五
+  <strong>
+   巡视组
+  </strong>
+  到达当地，然而截访人员却是层层把守，他亦遭到威胁：如果再来
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/上访" target="_blank">
+    上访
    </span>
   </strong>
-  是先人
-  <strong>
-   智慧
-  </strong>
-  的
-  <strong>
-   结晶
-  </strong>
-  ，已在国人心中流淌千百年，其中蕴藏的智慧，应用在待人处世上，常有意想不到的效果，足以让人受用一生。
+  就会被“判刑”。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  古训今译，古训今鉴，读而思，思而行，行而达。下面收集了17句古训金言，望尔获益。
+  李高禧告诉《看
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  》，他原本与兄弟李高寿一直从事园林景观石经营业务，一次偶然的机会，他们认识了原赣州市公安局交警支队直属大队副大队长龙期民，龙期民表示有意入股合作拓展景观石业务。
  </p>
  <p>
-  【古训1】刚直，则当忘身以为国，履正以无偏。（ 据《金史•王修传》）
+  然而，龙期民入股后因公司效益不佳，竟串通原赣州市公安局经侦支队第三大队大队长职务的邓增华，采取公权私用方式，将其夫妇骗到赣州市公安局经侦支队三大队，连续多日限制信访人李高禧夫妇人身自由，在没有对企业资产评估和审计的情况下，用恐吓、威逼等手段，强迫李高禧以308万多元超高价格，接受龙期民夫妇的20%股份，但该股份的实际价值只有20-30万。
+ </p>
+ <p>
+  李高禧因拿不出308万元，还被强制性入狱18个月。2020年8月20日出狱后，李高禧四处鸣冤上告，却遭到各司法部门互相推诿，最后连他上告的材料都被当局抽调（销毁）了。
+ </p>
+ <p style="text-align:center">
+  <img alt="" src="https://img3.secretchina.com/pic/2020/12-7/p2833584a789866390-ss.jpg" style="height:589px; width:450px"/>
   <br>
-   【今译】刚直之人，就应当为国家舍死忘生，做事正直。而不偏听偏信。
+   李高禧被公安干警限制人身自由，逼迫无奈在他们起草写着308万多元的股权“承诺书”中，签下名字。（受访者提供）
   </br>
  </p>
  <p>
-  【古训2】岂有为人，知过而不能改者乎!（据《元史•木华黎传》）
+  被逼无奈之下，李高禧走上了漫漫上访路。不久前，中央巡视组将进驻
+  <span href="https://www.secretchina.com/news/gb/tag/江西" target="_blank">
+   江西
+  </span>
+  ，这让信访中的李高禧一度高兴得几个晚上没休息好。11月16日，李高禧到中央第五巡视组接访地上访，却遭到政府人员拦截，一位园区工作人员还告诉他：“‘巡视组’的人就住在前湖宾馆。他叫我不要打听，他不敢告诉我；就算告诉我，信访材料根本就送不进去！‘截访’都是里三层，外三层的把守人员。后来，他叫我不要再问了，被领导发现会受批评的。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align:center">
+  <img alt="" src="https://img3.secretchina.com/pic/2020/12-8/p2833771a315173289-ss.jpg"/>
   <br>
-   【今译】 难道有人知道做错了，还不能改正的吗?（知错而不改，能叫人吗？）
+   李高禧到中央第五巡视组接访地上访，被告知信访材料根本送不进去。（受访者提供）
   </br>
  </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p>
-  【古训3】伎巧为丧国斧斤，珠玉为荡心醯毒。侈丽纤美，不可以不遏。志骄于业泰，体逸于时安。（据《新唐书•后妃传》(上)）
+  后来一伙自称是本地公安和公安厅的“截访人员”把李高禧团团围住，收缴了他的上访材料，并控制了他的行动自由，“这伙人把我拉上了一辆中巴车，从前湖宾馆拉到了头一天的老地方——南昌大学。随后，4个人一直守护在我身边。直到吃晚饭的时间，也照样还有3个人，把我夹在中间，一起过去学校食堂吃饭。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align:center">
+  <img alt="" src="https://img3.secretchina.com/pic/2020/12-7/p2833582a238308754-ss.jpg"/>
   <br>
-   【今译】奸诈诡谲是丧亡国家的斧头，珍珠美玉是心志摇荡的毒酒。奢华纤巧之美，不可以不加阻止。志气骄惰，是由于事业的安泰；身体淫乐，是由于处境的安闲。
+   李高禧（中）等各地上访人员被截访后集中关在南昌大学体育馆内。（受访者提供）
   </br>
  </p>
- <p>
-  【古训4】任重道悠，利深祸速。（据《后汉书•皇后纪》上)
-  <br>
-   【今译】官职重大的人，任职的时间越长，求利越多，招祸越快。
-   <br>
-    <br>
-     【古训5】自古圣帝必以俭约为美，乱主必以奢侈贻患。（据《魏书•韩麒麟传》）
-     <br>
-      【今译】自古以来，圣明的帝王一定把俭朴当作好事；而昏庸的君主则一定因为奢侈，而种下祸患。
-     </br>
-    </br>
-   </br>
-  </br>
- </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
    <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -96,99 +139,7 @@
   </div>
  </center>
  <p>
-  【古训6】自古以来，身居富贵，能知止足者，甚少。（据《旧唐书•李靖传》）
-  <br/>
-  【今译】自古以来，身居富贵而能知道适可而止的人，很少。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  【古训7】行舍其华，言去其辩。（据《晋书•应贞传》）
-  <br/>
-  【今译】 行动应舍弃浮华（做事要诚实），言论要舍弃诡辩（说话要正直）。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  【古训8】行道之人，德行文学为根株，正直刚毅为柯叶。有根无叶，或可俟时；有叶无根，膏雨所不能活也。至于孝慈、友悌、忠信、笃行，乃食之醯酱，可一日无哉?   （据《新唐书•柳公绰传》）
-  <br/>
-  【今译】遵行大道的人，以德行和文学为根株，以正直刚毅为枝叶。有根没有叶，尚且可以等待时日；有叶没有根，则肥沃的雨水也不能救活它。至于孝慈、友悌、忠信、诚实，犹如吃的酱醋，能够一天没有吗?
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  【古训9】行正道，循礼义，敦友爱，尽公忠。（据《清史稿•太宗本纪》)
-  <br/>
-  【今译】按正确的道理、准则做事，遵循礼法、道义，忠诚地促成友爱，竭力为公事效忠。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  【古训10】杀身成仁，虽死犹生。（据《明史•晋恭王朱桐传》）
-  <br/>
-  【今译】杀身成仁，即使是死了，也像活着一样受人尊敬。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  【古训11】名者，公器也。不可多取。（据《三国志•张温传》）
-  <br/>
-  【今译】名位，是天下人所共有的。不可以一个人贪心多取。
-  <br/>
-  <br/>
-  【古训12】危邦不入，乱邦不居。（据《晋书•张方传》）
-  <br/>
-  【今译】处于危险之中的国家，不要进入；处于动乱的国家，不要停留。
+  后来又有两名工作人员给他做思想工作，让他不要上访。同时，还“警告”说，这次上访我们是叫你们当地政府来把你押回去，下次你要是再敢来上访，你就属于“犯法”了，就要抓起来“判刑”了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -206,10 +157,11 @@
   <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="fluid" data-ad-layout="in-article" data-ad-slot="3646767294" style="display:block; text-align:center;">
   </ins>
  </center>
- <p>
-  【古训13】兆始恶者有终殃，积不善者无余庆。（据《北史•崔宏传》）
-  <br/>
-  【今译】出现坏的征兆，最终必有灾祸；长期做坏事的人，不会有好的结局。
+ <p style="text-align:center">
+  <img alt="" src="https://img3.secretchina.com/pic/2020/12-7/p2833583a663325385-ss.jpg" style="height:446px; width:450px"/>
+  <br>
+   押走李高禧的截访车（受访者提供）
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -224,9 +176,7 @@
   </div>
  </center>
  <p>
-  【古训14】汝惟不矜，天下莫与汝争能；汝惟不伐，天下莫与汝争功。（据《隋书•李谔传》）
-  <br/>
-  【今译】只要你不自以为贤能，天下就没有与你竞争才能的人；只要你不自我夸耀，天下就没有与你争夺功劳的人。
+  李高禧说，他在信访过程中遇到很多和他一样的“落魄人。”他不禁发问：难道公检法司人员涉案一手“炮制”出来的违纪、违法案件，注定就应该老百姓自认“倒霉”一辈子吗？演绎成现代社会的“杨乃武”吗？“专业”信访户都是这么被逼出来的吗？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -241,43 +191,7 @@
   </div>
  </center>
  <p>
-  【古训15】进不知退，取祸之道也！（据《新唐书•高智周传》）
-  <br/>
-  【今译】只知前进不知后退，是招取祸败的道途。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  【古训16】志骄则好生事，器小则无远图。（据《明史•太祖本纪》(三)）
-  <br/>
-  【今译】志气高傲，容易惹是生非；器量狭小，就不会有长远打算。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  【古训17】声过其实，古人所不取。攻乎异端，为政之甚害。（据《晋书•张闿》）
-  <br/>
-  【今译】声誉超过本人的实际情况，这是古人所不赞成的。攻击不同的观点与学说，对治理国家，是有严重危害的！
+  李高禧对《看中国》表示，共产党政府整天讲为民做主，但是却将他逼得走投无路，“我以前一直觉得政府是比较神圣的，法律是神圣的，但是自从经历了这件事情，我不敢再相信政府，都是官官相互，走哪里都是官官相互！国内媒体也没有人报道我的案子，我现在就是呼吁境外媒体关注我的案子，要政府还我一个公道。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -341,13 +255,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/02/938210.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/955044.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/955044.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/955044.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/08/955044.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p7/938210.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/955044.md' width='0px' height='0px'/>
