同步于: 12月8日20时52分

--- a/pages/nsc412/n12603635.md
+++ b/pages/nsc412/n12603635.md
@@ -179,7 +179,7 @@
   <img alt="" class="size-large wp-image-12596019" src="https://i.epochtimes.com/assets/uploads/2020/12/472753-600x386.jpg"/>
  </ok>
  <br/><figcaption class="wp-caption-text">
-  蓬佩奥资料照 (SAUL LOEB/POOL/AFP via Getty Images)
+  蓬佩奥资料照。 (SAUL LOEB/POOL/AFP via Getty Images)
  </figcaption><br/>
 </figure><br/>
 <p>
@@ -199,7 +199,7 @@
   <img alt="" class="size-large wp-image-12231932" src="https://i.epochtimes.com/assets/uploads/2020/07/b65c588cd48879fd2fa6d115ee8ead7e-600x400.jpg"/>
  </ok>
  <br/><figcaption class="wp-caption-text">
-  美国司法部长比尔‧巴尔（Bill Barr）(Nicholas Kamm/AFP)
+  美国司法部长比尔‧巴尔（Bill Barr）。(Nicholas Kamm/AFP)
  </figcaption><br/>
 </figure><br/>
 <p>
